--- a/QuantumScrambleImage/QuantumScrambleImage/QuantumScrambleImage.csproj
+++ b/QuantumScrambleImage/QuantumScrambleImage/QuantumScrambleImage.csproj
@@ -13,7 +13,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Quantum.Development.Kit" Version="0.18.2106148911" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
     <PackageReference Include="Vereyon.Web.FlashMessage" Version="3.0.0" />
   </ItemGroup>
 
